--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -632,3 +632,22 @@ a.item-control.disabled-roll:hover {
   margin-right: 0.3em;
   margin-bottom: 2px;
 }
+
+.chat-message .chat-legwork h4 {
+  color: var(--highlight-color);
+  font-style: italic;
+  font-weight: 700;
+}
+.chat-message .chat-legwork .payformore {
+  font-style: italic;
+  font-weight: 700;
+  margin-bottom: 6px;
+}
+.chat-message .chat-legwork .unwilling span {
+  color: transparent;
+  text-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+.chat-message .chat-legwork span.willing {
+  color: revert;
+  text-shadow: revert;
+}
