--- a/templates/parts/section-contacts.html
+++ b/templates/parts/section-contacts.html
@@ -8,23 +8,25 @@
 <table>
 	<thead>
 		<tr>
-		  <th style="text-align:left">{{ localize 'shadowrun6.label.column.nameAnimate' }}</th>
-		  <th>{{ localize 'shadowrun6.contact.type' }}</th>
-		  <th>{{ localize 'shadowrun6.contact.rating_short' }}</th>
-		  <th>{{ localize 'shadowrun6.contact.loyalty_short' }}</th>
-		  <th>{{localize 'shadowrun6.contact.favors_short'}}</th>
-		  <th colspan="2">{{ localize 'shadowrun6.label.column.action' }}</th>
+		  <th style="width: 8em; text-align:left">{{ localize 'shadowrun6.label.column.nameAnimate' }}</th>
+		  <th style="width: 3em">{{ localize 'shadowrun6.contact.type' }}</th>
+		  <th style="width: 1em">{{ localize 'shadowrun6.contact.rating_short' }}</th>
+		  <th style="width: 1em">{{ localize 'shadowrun6.contact.loyalty_short' }}</th>
+		  <th style="width: 1em">{{localize 'shadowrun6.contact.favors_short'}}</th>
+		  <th style="width: 1em"><i class="fa-solid fa-phone-volume" title="{{localize 'shadowrun6.contact.legwork'}}"></i></th>
+		  <th style="width: 2em">{{ localize 'shadowrun6.label.column.action' }}</th>
 		</tr>
 	  </thead>
 		{{#each actor.items as |item id|}}
 		{{#iff item.type '==' 'contact'}}
 		<tr class="item list-item" data-item-id="{{item.id}}">
-			<td style="width: 8em"> <input name="contactName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
-			<td class="centered" style="width: 3em"> <input name="contactType{{id}}" type="text" value="{{item.system.type}}" data-field="system.type" class="secondary" disabled></td>
-			<td class="centered" style="width: 1em"> <input name="contactRating{{id}}" type="text" value="{{item.system.rating}}" data-field="system.rating" class="secondary" disabled></td>
-			<td class="centered" style="width: 1em"> <input name="contactLoyality{{id}}" type="text" value="{{item.system.loyalty}}" data-field="system.loyalty" class="secondary" disabled></td>
-			<td class="centered" style="width: 1em"> <input name="contactFavors{{id}}" type="number" value="{{item.system.favors}}" data-field="system.favors" class="box" /></td>
-			<td class="centered" style="width: 2em">
+			<td> 				  <input name="contactName{{id}}" type="text" value="{{item.name}}" data-field="name" title="{{item.system.description}}" disabled></td>
+			<td class="centered"> <input name="contactType{{id}}" type="text" value="{{item.system.type}}" data-field="system.type" class="secondary" disabled></td>
+			<td class="centered"> <input name="contactRating{{id}}" type="text" value="{{item.system.rating}}" data-field="system.rating" class="secondary" disabled></td>
+			<td class="centered"> <input name="contactLoyality{{id}}" type="text" value="{{item.system.loyalty}}" data-field="system.loyalty" class="secondary" disabled></td>
+			<td class="centered"> <input name="contactFavors{{id}}" type="number" value="{{item.system.favors}}" data-field="system.favors" class="box" /></td>
+			<td class="centered" style="font-size: 16px;"> <a class="item-control legwork-roll" data-connection="{{item.system.rating}}" data-loyalty="{{item.system.loyalty}}" data-contact="{{item.name}}" data-roll-id="legwork"><i class="fas fa-dice-six" title="{{localize 'shadowrun6.contact.legwork'}}"></i></a></td>
+			<td class="centered">
 				<a class="item-control item-edit" title='{{localize 'shadowrun6.label.edit' }}'><i
 				class="fas fa-edit"></i></a> <a class="item-control item-delete"
 				title='{{localize 'shadowrun6.label.delete' }}'><i class="fas fa-trash"></i></a>
