--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -621,6 +621,7 @@ a.item-control.disabled-roll:hover {
 .chat-message .message-header .flavor-text {
   color: var(--highlight-color);
   font-size: var(--font-size-14);
+  font-weight: 600;
 }
 .edgeToken {
   background-image: url(../images/EdgeToken.webp);
