Bugfix - Don't show (not working) rolltooltip on initiative roll chatmessages

--- a/templates/chat/roll-sr6.html
+++ b/templates/chat/roll-sr6.html
@@ -31,7 +31,7 @@
   {{#if publicRoll}}
   <div>
     <div class="dice-result">
-      <header class="part-header flexrow chat-edge-post">
+      <header class="part-header flexrow{{#unless (eq rollType "initiative")}} chat-edge-post{{/unless}}">
         <div>{{formula}}</div>
         <br/>
         {{#if system.extended}}
