--- a/templates/chat/tooltip.html
+++ b/templates/chat/tooltip.html
@@ -1,13 +1,23 @@
 <div class="dice-tooltip chat-edge-post-collapsible" style="display:none">
     <section class="tooltip-part">
+        {{#iff finished.configured.threshold ">" 1}}
+        <div class="threshold"><span>{{ localize 'shadowrun6.label.threshold'}}: </span> {{finished.threshold}}</div>
+        {{/iff}}
         <div class="dice">
+            {{#if finished.configured.extended}}<span>{{ localize 'shadowrun6.dice.extended_first_interval'}}:</span>{{/if}}
             <ol class="dice-rolls">
-                {{#each results as |result id|}}
-                    <li class="{{result.classes}}" data-index="{{id}}" title="{{result.title}}">&nbsp;</li>
-                {{/each}}
+            {{#each results as |result id|}}
+                {{#if result.firstDieOfNextInterval}}
+                </ol>
+                <span>{{ localize 'shadowrun6.dice.extended_next_interval'}}:</span>
+                <ol class="dice-rolls">
+                {{/if}}
+                <li class="{{result.classes}}" data-index="{{id}}" title="{{result.title}}">&nbsp;</li>
+            {{/each}}
             </ol>
         </div>
 
+        {{#unless finished.configured.extended}}
 	    <!-- Edge Boosts and Actions -->
         {{#unless data.edge_use}}
         <div class="spend_edge own-edge-options hidden">
@@ -30,6 +40,8 @@
                 <button name="edgePerform" class="edgePerform" type="button"><div class="edgeToken"></div>{{localize "shadowrun6.roll.edge.spend"}}</button>
             </form>
         </div>
+        {{/unless}}
+
         {{/unless}}
     </section>
 </div>
