Bugfix: Allow uneven sized images for Items to display correctly

--- a/styles/shadowrun6.css
+++ b/styles/shadowrun6.css
@@ -787,7 +787,11 @@ a.item-control.disabled-roll:hover {
 .dialog-content .interval select {
   height: var(--form-field-height);
 }
-
 .chat-message .continue-extended-test .success {
   padding-bottom: 5px;
+}
+
+.sheet.item img {
+  max-height: 92px;
+  width: auto;
 }
