--- a/templates/item/shadowrun6-echo-sheet.html
+++ b/templates/item/shadowrun6-echo-sheet.html
@@ -2,7 +2,7 @@
     {{!-- Sheet Body --}}
     <section class="sheet-body">
         <h2><input name="name" type="text" value="{{item.name}}" data-field="name" /></h2>
-        <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92" style="background-color: var(--highlight-color)"/>
+        <img src="{{item.img}}" data-edit="img" title="{{item.name}}" style="background-color: var(--highlight-color)"/>
         <div class="section">
             <h3>{{localize 'shadowrun6.qualityedit.explain'}}</h3>
             <textarea name="explain" class="box" type="text" data-field="system.explain" cols="50"
