--- a/templates/item/shadowrun6-ritual-sheet-ro.html
+++ b/templates/item/shadowrun6-ritual-sheet-ro.html
@@ -2,7 +2,7 @@
         {{!-- Sheet Body --}}
         <section class="sheet-body">
                 <h2><input type="text" value="{{item.name}}" name="name" /></h2>
-                <img src="{{item.img}}" data-edit="img" title="{{item.name}}" height="92" width="92" style="background-color: var(--highlight-color)"/>
+                <img src="{{item.img}}" data-edit="img" title="{{item.name}}" style="background-color: var(--highlight-color)"/>
                 <div class="section">
                         <h3>{{localize 'shadowrun6.item.feature'}}</h3>
                         <table>
