--- a/templates/parts/pc-derived.html
+++ b/templates/parts/pc-derived.html
@@ -35,7 +35,7 @@
 				<td class="centered"><label >{{system.attackrating.physical.base}}</label></td>
 				<td class="centered">
 					<input name="derivedAttackRatingPhysicalMod" class="centered box" data-field="system.attackrating.physical.mod" type="text" value="{{system.attackrating.physical.mod}}" data-dtype="Number"
-					id="derived1" style="width: 2em" title="{{system.attackrating.physical.modString}}">
+					style="width: 2em" title="{{system.attackrating.physical.modString}}">
 				</td>
 				<td class="centered">{{system.attackrating.physical.pool}}</td>
 			</tr>
@@ -45,7 +45,7 @@
 				<td class="centered"><label >{{system.derived.composure.base}}</label></td>
 				<td class="centered">
 					<input name="derivedComposureMod" class="centered box" data-field="system.derived.composure.mod" type="text" value="{{system.derived.composure.mod}}" data-dtype="Number"
-					id="derived1" style="width: 2em" title="{{system.derived.composure.modString}}">
+					style="width: 2em" title="{{system.derived.composure.modString}}">
 				</td>
 				<td class="centered">{{system.derived.composure.pool}}</td>
 				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.composure.pool}}" data-roll-id="composure"><i class="fas fa-dice-six"></i></a></td>
@@ -56,7 +56,7 @@
 				<td class="centered"><label >{{system.derived.judge_intentions.base}}</label></td>
 				<td class="centered">
 					<input name="derivedJudgeIntentionsMod" class="centered box" data-field="system.derived.judge_intentions.mod" type="text" value="{{system.derived.judge_intentions.mod}}" data-dtype="Number"
-					id="derived1" style="width: 2em" title="{{system.derived.judge_intentions.modString}}">
+					style="width: 2em" title="{{system.derived.judge_intentions.modString}}">
 				</td>
 				<td class="centered">{{system.derived.judge_intentions.pool}}</td>
 				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.judge_intentions.pool}}" data-roll-id="judge_intentions"><i class="fas fa-dice-six"></i></a></td>
@@ -67,7 +67,7 @@
 				<td class="centered"><label >{{system.derived.memory.base}}</label></td>
 				<td class="centered">
 					<input name="derivedMemoryMod" class="centered box" data-field="system.derived.memory.mod" type="text" value="{{system.derived.memory.mod}}" data-dtype="Number"
-					id="derived1" style="width: 2em" title="{{system.derived.memory.modString}}">
+					style="width: 2em" title="{{system.derived.memory.modString}}">
 				</td>
 				<td class="centered">{{system.derived.memory.pool}}</td>
 				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.memory.pool}}" data-roll-id="memory"><i class="fas fa-dice-six"></i></a></td>
@@ -78,7 +78,7 @@
 				<td class="centered"><label >{{system.derived.lift_carry.base}}</label></td>
 				<td class="centered">
 					<input name="derivedLiftCarryMod" class="centered box" data-field="system.derived.lift_carry.mod" type="text" value="{{system.derived.lift_carry.mod}}" data-dtype="Number"
-					id="derived1" style="width: 2em" title="{{system.derived.lift_carry.modString}}">
+					style="width: 2em" title="{{system.derived.lift_carry.modString}}">
 				</td>
 				<td class="centered">{{system.derived.lift_carry.pool}}</td>
 				<td><a class="item-control attributeonly-roll skill-pool" data-pool="{{system.derived.lift_carry.pool}}" data-roll-id="lift_carry"><i class="fas fa-dice-six"></i></a></td>
