--- a/styles/sr-fonts.css
+++ b/styles/sr-fonts.css
@@ -13,44 +13,61 @@ body.game.foundry-modern .app {
     --font-h5: "Play", serif;
     --font-h6: "Rubik Glitch", serif;
     --font-sans: "Play", serif;
+    --font-h3-size: var(--font-size-24);
+    --font-h4-size: var(--font-size-20);
 }
 
-.game h1, h2, h3, h4 {
-    font-weight: 700;
-    margin: 0 0 0.5rem;
-    padding: 0;
+.game h1, .game h2, .game h3, .game h4 {
+  margin: 0 0 0.5rem;
+  padding: 0;
+}
+.game h1.window-title {
+  margin: 0;
+  border-bottom: 0;
+}
+.game h1 {
+  font-weight: 400;
+  border-bottom: 3px solid var(--color-underline-header);
+}
+.game h2, .game h3 {
+  font-weight: 700;
+  border-bottom: 2px solid var(--color-underline-header);
 }
 .game h4 {
-    font-weight: 400;
+  font-weight: 400;
+  margin: 0;
+}
+.game .dialog h2, .game .dialog h3 {
+  margin: 0.5rem 0;
 }
 
 .game .play-regular {
-    font-family: "Play", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .game .play-bold {
-    font-family: "Play", serif;
-    font-weight: 700;
-    font-style: normal;
-  }
+  font-family: "Play", serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
-  .game .rubik-glitch-regular {
-    font-family: "Rubik Glitch", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+.game .play-bold {
+  font-family: "Play", serif;
+  font-weight: 700;
+  font-style: normal;
+}
 
-  .game .syncopate-regular {
-    font-family: "Syncopate", serif;
-    font-weight: 400;
-    font-style: normal;
-  }
+.game .rubik-glitch-regular {
+  font-family: "Rubik Glitch", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.game .syncopate-regular {
+  font-family: "Syncopate", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.game .syncopate-bold {
+  font-family: "Syncopate", serif;
+  font-weight: 700;
+  font-style: normal;
+}
   
-  .game .syncopate-bold {
-    font-family: "Syncopate", serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-    
